--- a/log-parser/config.yaml
+++ b/log-parser/config.yaml
@@ -1,7 +1,20 @@
-log-file-pattern: simple-log.*
-log-message-pattern: ((?!\|).*?(?=\|))
-log-fields:
-    - date
-    - component
-    - log
+logs:
+  simple-log:
+    name: simple log
+    path: sample-logs
+    log-file-pattern: simple-log.*
+    log-message-pattern: ((?!\|).*?(?=\|))
+    log-fields:
+      - date
+      - component
+      - log
+      
+  another-simple-log:
+    name: another simple log
+    path: sample-logs
+    log-file-pattern: another-simple-log.*
+    log-message-pattern: ((?!\|).*?(?=\|))
+    log-fields:
+      - date
+      - log
 mongodb-server: localhost
